# pingme

./: Cargo.toml  README.md
src/: diesel.toml  main.rs
src/cli/: mod.rs
src/db/: mod.rs  schema.rs  utils.rs
src/db/migrations/2024-06-25-220725_create_messages/: up.sql
src/models/: mod.rs
