[package]
name = "pingme"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
diesel = { version = "2.2.1", features = ["chrono", "sqlite"] }
diesel_migrations = "2.2.0"
home = "0.5.9"
notify-rust = "4.11.0"
prettytable-rs = "0.10.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
